--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>roro - our blog</title>
+  <title>roro - roro blog</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
@@ -53,8 +53,8 @@
   <div class="wrapper">
     <div class="container">
 
-      <img class="logo" src="http://hubpress.io/img/logo.png" alt="Logo HubPress.io">
-      <h1>Hub<span>Press</span>.io</h1>
+      <!--<img class="logo" src="http://hubpress.io/img/logo.png" alt="Logo HubPress.io">-->
+      <h1>roro.io</h1>
       <p class="button">An awesome blog will be here soon!</p>
 
       <a href="https://twitter.com/HubPressIO" class="twitter-follow-button" data-show-count="false">Follow @HubPressIO</a>
