--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <h1>roro.io</h1>
       <p class="button">An awesome blog will be here soon!</p>
 
-      <a href="https://twitter.com/HubPressIO" class="twitter-follow-button" data-show-count="false">Follow @HubPressIO</a>
+      <a href="https://twitter.com/the_r0r0" class="twitter-follow-button" data-show-count="false">Follow @the_r0r0</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     </div>
   </div>
